@@ -21,7 +21,7 @@
       <placeholder name="View specific actions placeholder">
         <menuitem name="InsertResource"      verb=""   accel="*Control*i"/>
         <menuitem name="InsertResources"     verb=""/>
-	<menuitem name="RemoveResource"      verb=""/>
+	<menuitem name="RemoveResource"      verb=""   accel="*Control*d"/>
         <separator/>
         <menuitem name="EditResource"        verb=""   accel="*Shift**Control*e"/>
 	<separator/>
