@@ -1,3 +1,9 @@
+2004-06-25  Setul Patel   <setulkumarpatel@yahoo.com>
+
+	* data/ui/gantt-view.ui:
+	* data/ui/task-view.ui:
+	* data/ui/resource-view.ui: Fix bug #144466.
+
 2004-06-25  Richard Hult  <richard@imendio.com>
 
 	* Makefile.am:
